tests/baselines/reference/parserGreaterThanTokenAmbiguity11.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity11.ts (1 errors) ====
    1 >>= 2;
    ~
!!! parserGreaterThanTokenAmbiguity11.ts(1,1): error TS2130: Invalid left-hand side of assignment expression.